tests/errors/missing-explicit-duration.typ
#import "../../src/lib.typ": score
#score(time: "4/4", bars: ((notes: "C4: D E F"),))
